[package]
name = "dognut"
version = "0.0.1"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"

[[bin]]
name = "test_term"


[dependencies]
#prost = "*"
proc-macro2 = "1"
tui = "0.*"
crossterm = "0.*"
tobj = { version = "4.*", features = ["async"] }
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
pixels = "=0.14.0"
winit_input_helper = "0.16"
profiling = "1.0.7"
wgpu = "23"
winit = "0.30"
crossbeam-channel = { version = "0.5.*" }             # for thread synchronize
clap = { version = "4.*", features = ["derive"] }
protobuf = "=3.2.0"

tokio = { version = "1", features = ["full"] }
dognut_macros = { path = "../dognut_macros" }


log4rs = "1.2.0"
lazy_static = "*"
json = "0.12.4"
cgmath = "0.18"

futures-intrusive = "0.5"
game-loop = { version = "1.3", features = ["winit"] }

gilrs = "0.*"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

#[build-dependencies]
#prost-build = "*"

[features]
image_encoder = []
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
